--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,6 +23,12 @@
         </plugins>
     </build>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.github.jsonld-java</groupId>
+            <artifactId>jsonld-java</artifactId>
+            <version>0.12.0</version>
+        </dependency>
+    </dependencies>
     
 </project>
